<resources>
    <string name="app_name">Đổi Đầu Số</string>
    <string name="back_action">Trở về</string>
    <string name="btn_accept">Đồng ý</string>
    <string name="btn_cancel">Hủy</string>
    <string name="btn_continue">Tiếp tục</string>
    <string name="btn_recovery">Phục hồi</string>
    <string name="change_isdn">Đổi đầu số</string>
    <string name="config_isdn">Cấu hình đầu số</string>
    <string name="description">Quét danh bạ</string>
    <string name="description1">Tìm tất cả số điện thoại 11 số trong danh bạ</string>
    <string name="description2">Ứng dụng sẽ yêu cầu quyền truy cập danh bạ</string>
    <string name="message_done">Chuyển đổi thành công %d thuê bao. Bạn còn lại %d thuê bao 11 số chưa đổi.</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="msg_add_rule_success">Thêm mới đầu số thành công!</string>
    <string name="msg_change_isdn" formatted="false">Bạn thực hiện đổi thành công %d/%d thuê bao!</string>
    <string name="msg_confirm_change_isdn" formatted="false">Bạn có chắc chắn muốn đổi đầu số của % d thuê bao?</string>
    <string name="msg_data_required">Bạn chưa nhập dữ liệu!</string>
    <string name="msg_delete_success">Xóa dữ liệu thành công!</string>
    <string name="msg_logout">Bạn chắc chắn muốn đóng ứng dụng?</string>
    <string name="msg_network_all">Tất cả</string>
    <string name="msg_rule_existed">Luật đổi đầu số đã tồn tại!</string>
    <string name="network_array">Danh sách nhà mạng</string>
    <string name="network_gmobile">Nhà mạng GMobile</string>
    <string name="network_mobifone">Nhà mạng Mobifone</string>
    <string name="network_other">Nhà mạng khác</string>
    <string name="network_vietnammobile">Nhà mạng VietnamMobile</string>
    <string name="network_viettel">Nhà mạng Viettel</string>
    <string name="network_vinaphone">Nhà mạng Vinaone</string>

    <string name="recovery_message_done">Phục hồi thành công %d thuê bao.</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_confirm">Xác nhận</string>
    <string name="title_number_change_isdn">Số thuê bao chuyển đổi: %d/%d</string>
    <string name="title_number_need_change_isdn">Số thuê bao lựa chọn %d/%d</string>
    <string name="title_prefix_new">Đầu số mới</string>
    <string name="title_prefix_old">Đầu số cũ</string>
    <string name="total_sub">Tổng số thuê bao: %d thuê bao</string>
    <string name="txt_app_info">Thông tin mở rộng</string>
    <string name="txt_guide">Guide</string>
    <string name="txt_information">Information</string>
    <string name="txt_process_system">Đang quét toàn bộ danh bạ...</string>
    <string name="txt_processing_change">Đang thực hiện chuyển đổi thuê bao...</string>
    <string name="txt_processing_recovery">Đang thực hiện khôi phục thuê bao...</string>
    <string name="txt_rate_app">Đánh giá, cho điểm Đổi đầu số.</string>
    <string name="txt_recovery">Phục hồi</string>
    <string name="txt_recovery_confirm" formatted="false">Bạn chắc chắn muốn khôi phục %d thuê bao?</string>
    <string name="txt_recovery_content">Bạn đã chuyển %d sđt qua đầu số mới. Bạn có thể phục hồi về đầu số cũ nếu muốn.</string>
    <string name="txt_recovery_note">Lưu ý: Bản sao lưu này sẽ mất khi bạn gỡ ứng dụng.</string>
    <string name="txt_recovery_success">Phục hồi %d thuê bao thành công!</string>
    <string name="txt_select_all_sub">Tất cả thuê bao (%d thuê bao)</string>
    <string name="txt_select_network">Chọn nhà mạng</string>
    <string name="txt_select_number">Chọn Đầu số</string>
    <string name="txt_select_share_app">Chọn ứng dụng chia sẻ</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_share">Share</string>
    <string name="txt_share_app" formatted="false">Ứng dụng giúp các bạn đổi các số thuê bao từ 11 số 10 số đơn giản nhanh chóng, chính xác tuyệt đối.
        Link tải ứng dụng %s</string>
    <string name="description_info">Do lịch chuyển đổi các đầu số khác nhau không cùng 1 thời điểm nên mỗi lần quét danh bạ ứng dụng chỉ tích chọn sẵn những liên hệ thuộc đầu số đã đến ngày chuyển đổi để đảm bảo số mới sau khi chuyển đã bắt đầu sử dụng được</string>
    <string name="description_scan_number">Để đảm bảo tốc độ mỗi lần quét danh bạ chúng tôi chỉ hiển thị tối đa 100 liên hệ, bạn nào danh bạ quá nhiều liên hệ thì thực hiện nhiều lần nhé.</string>
    <string name="btn_info">Lịch Chuyển Đổi</string>
    <string name="url_app">http://gamemobileglobal.com/</string>
    <string name="title_info">Thông báo</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="rate_app">Đánh giá ứng dụng</string>
    <string name="title_confirm_number_validate" formatted="false">Bạn không chọn được thuê bao này vì đầu số %s tới ngày %s mới đến lịch chuyển, việc chuyển đổi trước sẽ không liên lạc được.\n
        Hãy quay lại chuyển đổi sau ngày %s nhé.</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_confirm_connect_internet">Bạn vui lòng kiểm tra lại kết nối mạng. Ứng dụng cần có mạng để hoạt động tốt hơn. Xin cảm ơn!</string>
    <string name="btn_try">Thử lại</string>
    <string name="msg_confirm_calendar_connect_internet">Kiểm tra lại kết nối mạng. Để xem lịch chuyển đổi cần có kết nối mạng. Xin cảm ơn!</string>
    <string name="test"><![CDATA[<font color=#d80027>%s</font><font color=#000000>%s</font>]]></string>
    <string name="title_contact">Danh bạ</string>
    <string name="title_history_recovery">Lịch sử chuyển đổi</string>
    <string name="title_total_recovery_number" formatted="false">%d thuê bao</string>
</resources>