<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7f252525">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/txt_select_network"
                    android:textColor="@color/colorWhite"
                    android:textSize="20.0dip" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="right"
                    android:paddingLeft="@dimen/fab_margin"
                    android:paddingRight="@dimen/fab_margin"
                    app:srcCompat="@drawable/ic_close_button" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/msg_network_all"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textSize="@dimen/text_large" />

                <CheckBox
                    android:id="@+id/checkboxAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/toggle"
                    android:layout_marginRight="@dimen/fab_margin" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:background="@color/colorGray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0.0dip"
                    android:layout_height="40.0dip"
                    android:layout_weight="1.0"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_cancel"
                    android:textAllCaps="true" />

                <View
                    android:layout_width="1.0dip"
                    android:layout_height="fill_parent"
                    android:background="@color/colorWhite" />

                <Button
                    android:id="@+id/btnAccept"
                    android:layout_width="0.0dip"
                    android:layout_height="40.0dip"
                    android:layout_weight="1.0"
                    android:background="@color/colorPrimary"
                    android:text="@string/btn_accept"
                    android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
