<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@id/viewDone"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <include layout="@layout/rule_setting_toolbar" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDoneMessage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:text="@string/message_done"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="22.0sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="35.0dip"
                    android:layout_height="35.0dip"
                    android:layout_margin="25dp"
                    app:srcCompat="@drawable/ic_suceess" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal">

                    <TextView
                        android:id="@+id/btnBack2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:background="#54aae3"
                        android:elevation="3dp"
                        android:gravity="center"
                        android:padding="@dimen/padding_large"
                        android:text="Tiếp tục đổi"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvViewContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:background="#e2a553"
                        android:elevation="3dp"
                        android:gravity="center"
                        android:padding="@dimen/padding_large"
                        android:text="Xem danh bạ"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_normal"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:layout_marginRight="@dimen/padding_normal">

                    <TextView
                        android:id="@+id/btnShare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:background="#e4de53"
                        android:elevation="3dp"
                        android:gravity="center"
                        android:padding="@dimen/padding_large"
                        android:text="@string/share_app"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btnRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:background="#62d658"
                        android:elevation="3dp"
                        android:gravity="center"
                        android:padding="@dimen/padding_large"
                        android:text="@string/rate_app"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:text="Hãy ủng hộ nhà phát triển = cách ấn nút chia sẻ đăng lên facebook hoặc gửi cho bạn bè cùng sử dụng nhé."
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16.0sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</layout>
