<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/mainQC"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/adsBannerDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:visibility="gone"
                    android:orientation="vertical" />

                <ImageView
                    android:id="@+id/bgAds"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:visibility="gone"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_height="160dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_above="@+id/mainQC"
                android:id="@id/viewDone"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDoneMessage"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginRight="30dp"
                        android:gravity="center"
                        android:text="@string/message_done"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="22.0sp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="35.0dip"
                        android:layout_height="35.0dip"
                        android:layout_margin="25dp"
                        app:srcCompat="@drawable/ic_suceess" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_normal"
                        android:layout_marginRight="@dimen/padding_normal">

                        <TextView
                            android:id="@+id/btnBack2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight=".5"
                            android:background="#54aae3"
                            android:elevation="3dp"
                            android:gravity="center"
                            android:padding="@dimen/padding_large"
                            android:text="Tiếp tục"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvViewContact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight=".5"
                            android:background="#e2a553"
                            android:elevation="3dp"
                            android:gravity="center"
                            android:padding="@dimen/padding_large"
                            android:text="Xem danh bạ"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_normal"
                        android:layout_marginTop="@dimen/padding_normal"
                        android:layout_marginRight="@dimen/padding_normal">

                        <TextView
                            android:id="@+id/btnShare"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight=".5"
                            android:background="#e4de53"
                            android:elevation="3dp"
                            android:gravity="center"
                            android:padding="@dimen/padding_large"
                            android:text="@string/share_app"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/btnRate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight=".5"
                            android:background="#62d658"
                            android:elevation="3dp"
                            android:gravity="center"
                            android:padding="@dimen/padding_large"
                            android:text="@string/rate_app"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</layout>